# Z2I

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  xmake.lua
.github/workflows/: msbuild.yml
config/: config.toml
elo_record/: caro_15x15_strength.csv  free-style_15x15_strength.csv  free-style_15x15_strength.xlsx  renju_15x15_strength.csv  standard_15x15_strength.csv  standard_caro_15x15_strength.csv
msvc/: pbrain-Z2I.sln
msvc/MCTS_test/: MCTS_test.vcxproj  MCTS_test.vcxproj.filters
msvc/pbrain-Z2I/: packages.config  pbrain-Z2I.vcxproj  pbrain-Z2I.vcxproj.filters
msvc/train_and_eval/: packages.config  train_and_eval.vcxproj  train_and_eval.vcxproj.filters
python/: learner.py  neural_network.py  onnxControllor.py  read_data.py  requirements.txt
scripts/: train.bat  train.sh  train_miniconda3.sh  train_net.bat  train_net.sh
src/: CaroJudge.cpp  CaroJudge.h  FreeStyleJudge.cpp  FreeStyleJudge.h  RenjuJudge.cpp  RenjuJudge.h  StandardJudge.cpp  StandardJudge.h  common.h  gomoku.cpp  gomoku.h  mcts.cpp  mcts.h  onnx.cpp  onnx.h  play.cpp  play.h  rule.h  thread_pool.h
src/eval/: train_eval_net.cpp
src/pbrain-Z2I/: pbrain-Z2I.cpp
src/train_and_eval/: train_eval_net.cpp
test/: CMakeLists.txt  get_best_action_from_prob_test.cpp  gomoku_test.cpp  mcts_test.cpp  multi_games_test.cpp  onnx_test.cpp  random_test.cpp  run_ort_trt.cpp  thread_pool_test.cpp  write_and_read_test.cpp
tools/bayes_elo_tool/: Cargo.toml
tools/bayes_elo_tool/src/: main.rs
